kong-api-gateway-ingress-control/bar-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deployment
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: api
        image: suppi147/bar:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  labels:
    app: bar-service
spec:
  ports:
  - port: 5000
    name: http
    targetPort: 5000
  selector:
    app: bar
